# scc-visualizer

./: CMakeLists.txt  CMakeLists.txt.user.9ead97f  algorithmpickerdialog.cpp  algorithmpickerdialog.h  algorithmpickerdialog.ui  animationspeeddialog.cpp  animationspeeddialog.h  animationspeeddialog.ui  animationwidget.cpp  animationwidget.h  edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  resources.qrc  stack.cpp  stack.h  table.cpp  table.h  utils.cpp  utils.h  visualizationwindow.cpp  visualizationwindow.h  visualizationwindow.ui
